--- a/C0721G2-livestock-farm-FE/package.json
+++ b/C0721G2-livestock-farm-FE/package.json
@@ -25,6 +25,7 @@
     "@auth0/angular-jwt": "^5.0.2",
     "angularx-social-login": "^3.0.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "firebase": "^8.10.0",
     "rxfire": "^6.0.0",
     "rxjs": "~6.5.4",
